# koan

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .releaserc.json  .travis.yml  AGENTS.md  CONTRIBUTING.md  Debian10.dockerfile  MANIFEST.in  Makefile  README  README.md  commitlint.config.js  koan.spec  package-lock.json  package.json  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py  towncrier.toml  travis.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01_bug_report.md  02_feature_request.md  config.yml
.github/workflows/: changelog.yml  codeql-analysis.yml  commitlint.yml  increase-version.yml  lint.yml  packaging.yml  pypi.yml  qa.yml  release.yml  release_main.yml  release_master.yml  (+1 more)
changelog.d/: 102.fixed  103.fixed  96.added
debian/: README.Debian  changelog  control  copyright  koan.dsc  rules
docs/: Makefile  cobbler-register.rst  conf.py  index.rst  installing-virtual-guests.rst  koan-on-openvz.rst  koan-with-isos.rst  koan.rst  reinstallation.rst  release-notes.rst  requirements.rtd.txt  virtual-networking-setup.rst  vmware.rst
koan/: __init__.py  app.py  cexceptions.py  cli.py  configurator.py  imagecreate.py  openvzcreate.py  qcreate.py  register.py  utils.py  virtinstall.py  vmwcreate.py  xencreate.py
tests/: conftest.py  test_app.py  test_cexceptions.py  test_cli.py  test_configurator.py  test_register.py  test_utils.py  test_virt_image.py  test_virt_openvz.py  test_virt_qemu.py  test_virt_vmw.py  test_virt_xen.py  test_virtinstall.py  virtinstall.py
(+24 files in other folders)
