[metadata]
name = koan
version = attr: koan.__version__
description = Kickstart over a Network Client for Cobbler
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Team Cobbler
author_email = cobbler.project@gmail.com
url = https://www.github.com/cobbler/koan
license = GPLv2
license_files = COPYING

[options]
install_requires =
    distro
    libvirt-python
    netifaces

[options.extras_require]
build =
    wheel
changelog =
    towncrier
lint =
    pyflakes
    black
test =
    pytest
    nose
    pytest-cov
    pytest-mock
docs =
    Sphinx
    sphinx-rtd-theme
